# state-test

./: package.json  pnpm-lock.yaml
src-tauri/: Cargo.toml  tauri.conf.json
src/lib/: ssr-layout.tsx
src/pages/: _app.tsx  index.tsx
src/stores/: user-store.ts
